# repo-view

./: README.md  pyproject.toml  repoview-context.txt
codecontext/: .gitignore  README.md  pyproject.toml
codecontext/repoview/: __init__.py  cli.py  config.py  core.py
repoview/: __init__.py  cache.py  cli.py  config.py  core.py  differ.py  error_handler.py  github.py  scanner.py  watcher.py
repoview-frontend/: README.md  index.html  tailwind.config.js
repoview-frontend/src/: App.tsx  index.css
repoview-frontend/src/components/: CommandBlock.tsx  CopyButton.tsx  FeatureCard.tsx  SectionHeading.tsx  StepCard.tsx  TerminalWindow.tsx  index.ts
repoview-frontend/src/hooks/: useScrollReveal.ts
repoview-frontend/src/sections/: Commands.tsx  Features.tsx  FocusMode.tsx  Footer.tsx  ForWho.tsx  GitHubSupport.tsx  Hero.tsx  HowItWorks.tsx  Navbar.tsx  Problem.tsx  QuickStart.tsx  TerminalLine.tsx  WatchMode.tsx  index.ts
repoview/cli/: __init__.py  info_mode.py  input_resolver.py  main.py  menus.py  modes.py  ui.py  wizard.py
repoview/core/: __init__.py  collectors.py  file_entry.py  processor.py  summarizers.py  token_counter.py  tree_builder.py
