[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "repoview"
version = "1.2.0"
description = "Turn any codebase into LLM-ready context — in seconds."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["llm", "context", "code", "ai", "cli", "developer-tools", "chatgpt", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
requires-python = ">=3.9"
dependencies = [
    "tiktoken>=0.7.0",
    "pathspec>=0.12.1",
    "questionary>=2.0.1",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "pyperclip>=1.8.2",
    "watchdog>=4.0.0",
]

[project.optional-dependencies]
dev = ["build", "twine", "pytest"]

[project.scripts]
repoview = "repoview.cli:app"

[project.urls]
Homepage = "https://github.com/yourname/repoview"

[tool.setuptools.packages.find]
where = ["."]
include = ["repoview*"]