[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repoview"
version = "1.0.0"
description = "Generate LLM-ready context files from your codebase — interactively."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["llm", "context", "code", "ai", "cli", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
requires-python = ">=3.9"
dependencies = [
    "tiktoken>=0.7.0",
    "pathspec>=0.12.1",
    "questionary>=2.0.1",
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "build",
    "twine",
    "pytest",
    "pytest-cov",
]

[project.scripts]
codecontext = "codecontext.cli:app"
cc = "codecontext.cli:app"

[project.urls]
Homepage = "https://github.com/yourname/codecontext"
Issues = "https://github.com/yourname/codecontext/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["codecontext*"]